--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
-    "presets": ["@babel/preset-env", "@babel/preset-react"],
-    "plugins": ["@babel/plugin-proposal-class-properties"]
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"],
+    "plugins": ["@babel/plugin-transform-runtime", "@babel/plugin-transform-block-scoping"],
 }
-  
-  
