--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,5 @@
     "presets": [
       "@babel/preset-env",
       "@babel/preset-react"],
-    "plugins": ["@babel/plugin-transform-runtime", "@babel/plugin-transform-block-scoping"],
+    "plugins": ["@babel/plugin-transform-runtime", "@babel/plugin-transform-block-scoping"]
 }
