--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "@hig/icons": "^3.1.0",
     "@hig/theme-data": "^2.13.0",
+    "@react-pdf/renderer": "^1.6.8",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "html2canvas": "^1.0.0-rc.5",
+    "jspdf": "^1.5.3",
     "rc-pagination": "^1.20.13",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
