--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.4.1",
     "html2canvas": "^1.0.0-rc.5",
     "jspdf": "^1.5.3",
+    "jspdf-autotable": "^3.5.3",
     "rc-pagination": "^1.20.13",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
