--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
-    "html2canvas": "^1.0.0-rc.5",
+    "dom-to-image": "^2.6.0",
     "jspdf": "^1.5.3",
     "jspdf-autotable": "^3.5.3",
     "rc-pagination": "^1.20.13",
