--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "html2canvas": "^1.0.0-rc.5",
+    "i18next": "^19.4.5",
     "jspdf": "^1.5.3",
     "jspdf-autotable": "^3.5.3",
+    "package.json": "^2.0.1",
     "rc-pagination": "^1.20.13",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-i18next": "^11.5.1",
     "recharts": "^2.0.0-beta.1"
   },
   "scripts": {
@@ -29,6 +32,7 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "@alienfast/i18next-loader": "^1.1.4",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-transform-block-scoping": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.8.3",
@@ -40,8 +44,8 @@
     "html-webpack-plugin": "^3.2.0",
     "react-scripts": "^3.3.0",
     "style-loader": "^1.1.2",
-    "webpack": "^4.41.2",
+    "webpack": "4.42.0",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
+    "webpack-dev-server": "3.10.3"
   }
 }
