--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
+    "i18next-http-backend": "^1.0.15",
     "react-scripts": "^3.3.0",
     "style-loader": "^1.1.2",
     "webpack": "4.42.0",
