--- a/package.json
+++ b/package.json
@@ -42,11 +42,10 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
-    "i18next-http-backend": "^1.0.15",
     "react-scripts": "^3.3.0",
     "style-loader": "^1.1.2",
-    "webpack": "4.42.0",
+    "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "3.10.3"
+    "webpack-dev-server": "^3.9.0"
   }
 }
