--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "d3-array": "^2.4.0",
+    "d3-axis": "^1.0.12",
+    "d3-scale": "^3.2.1",
+    "d3-selection": "^1.4.1",
     "dom-to-image": "^2.6.0",
     "i18next": "^19.4.5",
     "jspdf": "^1.5.3",
@@ -42,6 +46,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
+    "imports-loader": "^1.0.0",
     "react-scripts": "^3.3.0",
     "style-loader": "^1.1.2",
     "webpack": "^4.41.2",
