--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "d3-axis": "^1.0.12",
     "d3-scale": "^3.2.1",
     "d3-selection": "^1.4.1",
+    "d3-shape": "^1.3.7",
     "dom-to-image": "^2.6.0",
     "i18next": "^19.4.5",
     "jspdf": "^1.5.3",
