--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "d3-scale-chromatic": "^1.5.0",
     "d3-selection": "^1.4.1",
     "d3-shape": "^1.3.7",
+    "d3-transition": "^1.3.2",
     "dom-to-image": "^2.6.0",
     "i18next": "^19.4.5",
     "jspdf": "^1.5.3",
