--- a/.github/workflows/update_insight.yml
+++ b/.github/workflows/update_insight.yml
@@ -31,4 +31,4 @@ jobs:
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
-        echo {{ $secrets.PERSONAL_TOKEN }}
+        echo ${{ secrets.PERSONAL_TOKEN }}
