--- a/.github/workflows/update_insight.yml
+++ b/.github/workflows/update_insight.yml
@@ -37,7 +37,7 @@ jobs:
       uses: andstor/copycat-action@v3
       with:
         personal_token: ${{ secrets.PERSONAL_TOKEN }}
-        src_path: /.
+        src_path: .
         dst_path: /backup/
         dst_owner: pflaumingo
         dst_repo_name: SystemsAnalysisReports
