--- a/.github/workflows/update_insight.yml
+++ b/.github/workflows/update_insight.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Copy
       uses: andstor/copycat-action@v3
       with:
-        personal_token: ${{ secrets.PERSONAL_TOKEN }}
+        personal_token: ${{ secrets.GITHUB_TOKEN }}
         src_path: .
         dst_path: /backup/
         dst_owner: pflaumingo
