--- a/.github/workflows/update_gbxml_to_openstudio.yml
+++ b/.github/workflows/update_gbxml_to_openstudio.yml
@@ -27,9 +27,9 @@ jobs:
       with:
         personal_token: ${{ secrets.PERSONAL_TOKEN }}
         src_path: measure/systems_analysis_report_generator/
-        dst_path: /measures/systems_analysis_report_generator/
+        dst_path: /measures/
         dst_owner: pflaumingo
         dst_repo_name: workflow-actions
         clear: true
-        exclude: /measure/test/
+        exclude: measure/test/
         commit_message: "Automatic merge from the SystemsAnalysisReport repo"
