--- a/.github/workflows/update_gbxml_to_openstudio.yml
+++ b/.github/workflows/update_gbxml_to_openstudio.yml
@@ -31,5 +31,5 @@ jobs:
         dst_owner: pflaumingo
         dst_repo_name: workflow-actions
         clean: true
-        exclude: measure/test/
+        exclude: measure/test
         commit_message: "Automatic merge from the SystemsAnalysisReport repo"
