--- a/.github/workflows/update_gbxml_to_openstudio.yml
+++ b/.github/workflows/update_gbxml_to_openstudio.yml
@@ -30,6 +30,7 @@ jobs:
         dst_path: /measures/systems_analysis_report_generator/
         dst_owner: NREL
         dst_repo_name: gbxml-to-openstudio
+        dst_branch: develop 
         clean: true
         exclude: measure/systems_analysis_report_generator/test/*
         commit_message: "Automatic merge from the SystemsAnalysisReport repo"
