--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-pdf/renderer": "^1.6.8",
     "bootstrap": "^4.4.1",
     "d3-axis": "^1.0.12",
     "d3-scale": "^3.2.1",
@@ -11,10 +10,8 @@
     "d3-selection": "^1.4.1",
     "d3-shape": "^1.3.7",
     "d3-transition": "^1.3.2",
-    "dom-to-image": "^2.6.0",
     "i18next": "^19.4.5",
-    "jspdf": "^1.5.3",
-    "jspdf-autotable": "^3.5.3",
+    "pdfmake": "^0.1.66",
     "rc-pagination": "^1.20.13",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
@@ -24,7 +21,8 @@
   },
   "scripts": {
     "start": "webpack-dev-server --config webpack.config.js",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "analyze": "webpack --profile --json > webpack-stats.json"
   },
   "eslintConfig": {
     "extends": "react-app"
