--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "d3-selection": "^1.4.1",
     "d3-shape": "^1.3.7",
     "d3-transition": "^1.3.2",
+    "html-to-pdfmake": "^2.0.10",
     "i18next": "^19.4.5",
     "pdfmake": "^0.1.66",
     "rc-pagination": "^1.20.13",
