--- a/package.json
+++ b/package.json
@@ -4,49 +4,50 @@
   "private": true,
   "dependencies": {
     "@react-pdf/renderer": "^1.6.8",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.2",
     "d3-axis": "^1.0.12",
-    "d3-scale": "^3.2.1",
+    "d3-scale": "^3.2.3",
     "d3-scale-chromatic": "^1.5.0",
-    "d3-selection": "^1.4.1",
+    "d3-selection": "^1.4.2",
     "d3-shape": "^1.3.7",
     "d3-transition": "^1.3.2",
     "dom-to-image": "^2.6.0",
-    "i18next": "^19.4.5",
+    "i18next": "^19.8.2",
     "jspdf": "^1.5.3",
     "jspdf-autotable": "^3.5.3",
-    "rc-pagination": "^1.20.13",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-dom": "^16.12.0",
-    "react-i18next": "^11.5.1",
-    "recharts": "^2.0.0-beta.1"
+    "rc-pagination": "^1.21.1",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
+    "react-dom": "^16.13.1",
+    "react-i18next": "^11.7.3",
+    "recharts": "^2.0.0-beta.7"
   },
   "scripts": {
     "start": "webpack-dev-server --config webpack.config.js",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "analyze": "webpack --profile --json > webpack-stats.json"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
   "devDependencies": {
     "@alienfast/i18next-loader": "^1.1.4",
-    "@babel/core": "^7.10.3",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-transform-block-scoping": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/preset-env": "^7.10.3",
-    "@babel/preset-react": "^7.10.1",
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-transform-block-scoping": "^7.11.1",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/react": "^10.4.3",
     "@testing-library/user-event": "^12.0.11",
     "babel-loader": "^8.1.0",
-    "css-loader": "^3.4.2",
+    "css-loader": "^3.6.0",
     "html-webpack-plugin": "^3.2.0",
-    "imports-loader": "^1.0.0",
-    "style-loader": "^1.1.2",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
+    "imports-loader": "^1.2.0",
+    "style-loader": "^1.3.0",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
