--- a/package.json
+++ b/package.json
@@ -3,24 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-pdf/renderer": "^1.6.8",
     "bootstrap": "^4.5.2",
-    "d3-axis": "^1.0.12",
+    "d3-axis": "^2.0.0",
     "d3-scale": "^3.2.3",
-    "d3-scale-chromatic": "^1.5.0",
-    "d3-selection": "^1.4.2",
-    "d3-shape": "^1.3.7",
-    "d3-transition": "^1.3.2",
+    "d3-scale-chromatic": "^2.0.0",
+    "d3-selection": "^2.0.0",
+    "d3-shape": "^2.0.0",
+    "d3-transition": "^2.0.0",
     "dom-to-image": "^2.6.0",
     "i18next": "^19.8.2",
-    "jspdf": "^1.5.3",
-    "jspdf-autotable": "^3.5.3",
-    "rc-pagination": "^1.21.1",
+    "jspdf": "^2.1.1",
+    "jspdf-autotable": "^3.5.13",
+    "rc-pagination": "^3.1.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.7.3",
-    "recharts": "^2.0.0-beta.7"
+    "recharts": "^1.8.5"
   },
   "scripts": {
     "start": "webpack-dev-server --config webpack.config.js",
@@ -38,14 +37,14 @@
     "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
-    "@testing-library/jest-dom": "^5.11.0",
-    "@testing-library/react": "^10.4.3",
-    "@testing-library/user-event": "^12.0.11",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.0.4",
+    "@testing-library/user-event": "^12.1.7",
     "babel-loader": "^8.1.0",
-    "css-loader": "^3.6.0",
-    "html-webpack-plugin": "^3.2.0",
+    "css-loader": "^4.3.0",
+    "html-webpack-plugin": "^4.5.0",
     "imports-loader": "^1.2.0",
-    "style-loader": "^1.3.0",
+    "style-loader": "^2.0.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
