--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.7.3",
+    "react-select": "^3.1.0",
     "recharts": "^1.8.5"
   },
   "scripts": {
