--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
       "@babel/preset-env",
       "@babel/preset-react"],
     "plugins": [
+      "@babel/plugin-syntax-dynamic-import",
       "@babel/plugin-transform-runtime",
       "@babel/plugin-transform-block-scoping",
       "@babel/plugin-proposal-class-properties"
