--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@loadable/component": "^5.14.1",
     "bootstrap": "^4.5.2",
     "d3-axis": "^2.0.0",
     "d3-scale": "^3.2.3",
@@ -34,6 +35,7 @@
     "@alienfast/i18next-loader": "^1.1.4",
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-block-scoping": "^7.11.1",
     "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/preset-env": "^7.11.5",
