--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hig/button": "^1.4.4",
+    "@hig/tabs": "^1.3.0",
+    "@hig/theme-context": "^3.0.1",
+    "@hig/theme-data": "^2.18.0",
     "@loadable/component": "^5.14.1",
     "bootstrap": "^4.5.2",
     "d3-axis": "^2.0.0",
