--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "start": "webpack-dev-server --config webpack.config.js",
-    "build": "webpack --config webpack.config.js",
+    "build": "webpack --config webpack.config.js --optimize-max-chunks 1",
     "analyze": "webpack --profile --json > webpack-stats.json"
   },
   "eslintConfig": {
